BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/KPI_Rep_Activity_BMS_CN__c.object
<CustomObject>
    <fields>
        <fullName>Daily_Calls_Inv_BMS_CN__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Daily Calls(Inv)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Calls_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MTD Calls</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Calls_Day_BMS_CN__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>MTD Calls/Day</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOT_BMS_CN__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>TOT</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Working_Days_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Target Working Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>KPI Rep Activity Summary</label>
    <nameField>
        <displayFormat>KPA-{0000}</displayFormat>
        <label>KPI Rep Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI Rep Activity Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>